<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/delete_tasks_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/logged_time_input"
        android:text="@string/delete_label"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceListItem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <CheckBox
        android:id="@+id/checkbox_delete_open"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/checkbox_delete_open"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delete_tasks_label"
        android:layout_marginTop="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_delete_in_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_delete_in_process"
        app:layout_constraintTop_toBottomOf="@id/checkbox_delete_open"
        app:layout_constraintStart_toStartOf="@id/checkbox_delete_open" />

    <CheckBox
        android:id="@+id/checkbox_delete_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_delete_done"
        app:layout_constraintTop_toBottomOf="@id/checkbox_delete_in_process"
        app:layout_constraintStart_toStartOf="@id/checkbox_delete_in_process"/>

    <CheckBox
        android:id="@+id/checkbox_delete_blocked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_delete_blocked"
        app:layout_constraintTop_toBottomOf="@id/checkbox_delete_done"
        app:layout_constraintStart_toStartOf="@id/checkbox_delete_done"/>

</androidx.constraintlayout.widget.ConstraintLayout>