<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <!--Title-->
        <EditText
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/task_title_autofill_hint"
            android:hint="@string/task_title_hint"
            android:inputType="textNoSuggestions"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:textStyle="bold" />

        <!--area display-->
        <TextView
            android:id="@+id/task_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textAppearance="?attr/textAppearanceBody1" />

        <!--area spinner-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/task_area_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/task_area_spinner"
                android:text="@string/task_area_label"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/task_area_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <!--priority-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/task_prio_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/task_prio"
                android:text="@string/task_prio_label"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/task_prio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/task_prio_autofill_hint"
                android:inputType="number"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <!--expected duration-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/task_duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/task_duration"
                android:text="@string/task_duration_label"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/task_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/task_dur_autofill_hint"
                android:inputType="number"
                android:textAppearance="?attr/textAppearanceBody1" />
        </LinearLayout>

        <!--description-->
        <TextView
            android:id="@+id/task_descr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/task_duration"
            android:text="@string/task_descr_label"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/task_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/task_descr_autofill_hint"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/task_descr_hint"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="1"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>
</ScrollView>