<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="area" type="com.dhbw.cas.integra.ui.areas.Area"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/area_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@{area.text}"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:inputType="none"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/area_text_hint"
            android:autofillHints="@string/area_text_autofill_hint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"/>

        <View
            android:id="@+id/area_label"
            android:layout_width="64dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="16dp"
            android:background="@{area.label}"
            app:layout_constraintBottom_toBottomOf="@+id/area_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/area_text"
            app:layout_constraintTop_toTopOf="@+id/area_text"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/area_edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/white"
            android:contentDescription="@string/button_edit_area"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/area_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/area_label"
            app:layout_constraintTop_toTopOf="@+id/area_label"
            app:srcCompat="@drawable/ic_baseline_edit_24" />

        <ImageButton
            android:id="@+id/area_edit_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@android:color/white"
            android:contentDescription="@string/button_cancel_edit_area"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/area_edit_button"
            app:layout_constraintEnd_toStartOf="@+id/area_edit_button"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toEndOf="@+id/area_label"
            app:layout_constraintTop_toTopOf="@+id/area_edit_button"
            app:layout_constraintVertical_bias="0.473"
            app:srcCompat="@drawable/ic_baseline_cancel_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>