<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <!--title-->
    <TextView
        android:id="@+id/task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:maxLines="2"
        android:maxWidth="230dp"
        android:ellipsize="end"
        android:layout_marginBottom="4dp"/>

    <!--area-->
    <TextView
        android:id="@+id/task_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_toStartOf="@id/button_task_menu"
        android:gravity="end"/>

    <!--duration-->
    <TextView
        android:id="@+id/task_progress_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/task_title"
        android:layout_alignParentStart="true"
        android:labelFor="@+id/duration_progress"
        android:text="@string/task_progress_label"
        android:layout_marginEnd="4dp"/>
    <ProgressBar
        android:id="@+id/duration_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/task_progress_label"
        android:layout_alignBottom="@id/task_progress_label"
        android:layout_toEndOf="@id/task_progress_label"
        android:layout_below="@id/task_area"
        android:layout_marginEnd="8dp"/>

    <!--priority-->
    <TextView
        android:id="@+id/task_prio_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/duration_progress"
        android:layout_alignBottom="@id/duration_progress"
        android:layout_toEndOf="@id/duration_progress"
        android:labelFor="@+id/task_prio"
        android:text="@string/new_task_prio_label"
        android:layout_below="@id/task_area"
        android:layout_marginEnd="4dp" />

    <TextView
        android:id="@+id/task_prio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/duration_progress"
        android:layout_alignBottom="@id/duration_progress"
        android:layout_toEndOf="@id/task_prio_label"
        android:layout_below="@id/task_area" />

    <ImageButton
        android:id="@+id/button_task_menu"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_alignTop="@id/task_title"
        android:layout_alignBottom="@id/task_prio"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:src="@drawable/ic_baseline_more_vert_24"
        android:background="@color/white"
        android:contentDescription="@string/button_task_menu_descr"/>
</RelativeLayout>